--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'java'
-apply plugin: 'scala'
+//apply plugin: 'scala'
 
 repositories {
   mavenLocal()
   mavenCentral()
   jcenter()
+}
+
+dependencies {
+    compile group: 'junit', name: 'junit', version: '4.12'
 }
